# ai-writing-poc

./: .env.example  .gitignore  DEVIATIONS.md  README.md  package-lock.json  package.json  run.sh
apps/api/: .env.example  pyproject.toml
apps/api/app/: config.py  db.py  main.py  prompts.py  security.py
apps/api/app/models/: __init__.py  ai_interaction.py  document.py  permission.py  share_link.py  user.py  version.py
apps/api/app/routes/: ai.py  auth.py  collaboration.py  documents.py  permissions.py  versions.py
apps/api/app/schemas/: ai.py  auth.py  document.py  permission.py  user.py  version.py
apps/api/app/services/: ai_service.py  auth_service.py  collaboration_service.py  document_service.py  permission_service.py  share_link_service.py  version_service.py
apps/api/src/: server.js
apps/api/test/: server.test.js
apps/api/tests/: test_ai.py  test_auth.py  test_documents.py  test_permissions.py  test_prompts.py  test_share_links.py  test_websocket.py
apps/web/: jest.config.cjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.cjs  tsconfig.app.json  vite.config.ts
apps/web/e2e/: golden-path.spec.ts  helpers.ts
apps/web/src/: App.tsx  index.css  index.html
apps/web/src/components/: AIHistoryPanel.tsx  AITextAssistant.test.tsx  AITextAssistant.tsx  DocumentEditor.test.tsx  DocumentEditor.tsx  Layout.tsx  PresenceIndicator.tsx  ProtectedRoute.test.tsx  ProtectedRoute.tsx  SharePanel.tsx  TextSuggestionDiffPanel.test.tsx  TextSuggestionDiffPanel.tsx  VersionHistory.tsx
apps/web/src/context/: AuthContext.tsx
(+15 files in other folders)
